Bug 23552 - FAIL: gfortran.dg/large_real_kind_1.f90
Summary: FAIL: gfortran.dg/large_real_kind_1.f90
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.1.0
: P2 normal
Target Milestone: 4.1.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-08-24 22:58 UTC by John David Anglin
Modified: 2006-01-28 20:59 UTC (History)
2 users (show)

See Also:
Host: hppa2.0w-hp-hpux11.11
Target: hppa2.0w-hp-hpux11.11
Build: hppa2.0w-hp-hpux11.11
Known to work:
Known to fail:
Last reconfirmed: 2005-09-12 18:31:21


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John David Anglin 2005-08-24 22:58:38 UTC
Executing on host: /test/gnu/gcc-3.3/objdir/gcc/testsuite/../gfortran -B/test/gn
u/gcc-3.3/objdir/gcc/testsuite/../ /test/gnu/gcc-3.3/gcc/gcc/testsuite/gfortran.
dg/large_real_kind_1.f90   -O0   -pedantic-errors  -L/test/gnu/gcc-3.3/objdir/hp
pa2.0w-hp-hpux11.11/./libgfortran/.libs -L/test/gnu/gcc-3.3/objdir/hppa2.0w-hp-h
pux11.11/./libiberty  -lm   -o ./large_real_kind_1.exe    (timeout = 300)
PASS: gfortran.dg/large_real_kind_1.f90  -O0  (test for excess errors)
Setting LD_LIBRARY_PATH to .:/test/gnu/gcc-3.3/objdir/hppa2.0w-hp-hpux11.11/./li
bgfortran/.libs:/test/gnu/gcc-3.3/objdir/gcc:.:/test/gnu/gcc-3.3/objdir/hppa2.0w
-hp-hpux11.11/./libgfortran/.libs:/test/gnu/gcc-3.3/objdir/gcc
FAIL: gfortran.dg/large_real_kind_1.f90  -O0  execution test
Comment 1 Steve Ellcey 2005-09-12 18:31:21 UTC
This failure is due to the fact that isfinite() does not work for 'long double'
types on HP-UX 11.00.  isfinite() is used when writing floating point values in
the Fortran IO library.
Comment 2 GCC Commits 2005-09-27 21:13:03 UTC
Subject: Bug 23552

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	sje@gcc.gnu.org	2005-09-27 21:12:52

Modified files:
	libgfortran    : ChangeLog acinclude.m4 configure.ac configure 
	                 config.h.in libgfortran.h 
	libgfortran/io : write.c 
	libgfortran/intrinsics: c99_functions.c 

Log message:
	PR target/23552
	* acinclude.m4 (LIBGFOR_CHECK_FOR_BROKEN_ISFINITE): New.
	(LIBGFOR_CHECK_FOR_BROKEN_ISNAN): New.
	(LIBGFOR_CHECK_FOR_BROKEN_FPCLASSIFY): New.
	* configure.ac (LIBGFOR_CHECK_FOR_BROKEN_ISFINITE): Add use.
	(LIBGFOR_CHECK_FOR_BROKEN_ISNAN): Add use.
	(LIBGFOR_CHECK_FOR_BROKEN_FPCLASSIFY): Add use.
	* configure: Regenerate.
	* config.h.in: Regenerate.
	* libgfortan.h (isfinite): undef if broken, set if needed.
	(isnan): undef if broken, set if needed.
	(fpclassify): undef if broken, set if needed.
	* io/write.c: Remove TODO comment about working isfinite.
	* intrinsics/c99_functions.c (round): Use isfinite instead
	of fpclassify.
	* intrinsics/c99_functions.c (roundf): Ditto.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libgfortran/ChangeLog.diff?cvsroot=gcc&r1=1.311&r2=1.312
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libgfortran/acinclude.m4.diff?cvsroot=gcc&r1=1.7&r2=1.8
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libgfortran/configure.ac.diff?cvsroot=gcc&r1=1.35&r2=1.36
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libgfortran/configure.diff?cvsroot=gcc&r1=1.45&r2=1.46
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libgfortran/config.h.in.diff?cvsroot=gcc&r1=1.26&r2=1.27
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libgfortran/libgfortran.h.diff?cvsroot=gcc&r1=1.33&r2=1.34
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libgfortran/io/write.c.diff?cvsroot=gcc&r1=1.48&r2=1.49
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libgfortran/intrinsics/c99_functions.c.diff?cvsroot=gcc&r1=1.15&r2=1.16

Comment 3 Steve Ellcey 2006-01-26 18:55:58 UTC
These tests pass for me on the 4.1 branch and on mainline.