	PR target/23552 	* acinclude.m4 (LIBGFOR_CHECK_FOR_BROKEN_ISFINITE): New. 	(LIBGFOR_CHECK_FOR_BROKEN_ISNAN): New. 	(LIBGFOR_CHECK_FOR_BROKEN_FPCLASSIFY): New. 	* configure.ac (LIBGFOR_CHECK_FOR_BROKEN_ISFINITE): Add use. 	(LIBGFOR_CHECK_FOR_BROKEN_ISNAN): Add use. 	(LIBGFOR_CHECK_FOR_BROKEN_FPCLASSIFY): Add use. 	* configure: Regenerate. 	* config.h.in: Regenerate. 	* libgfortan.h (isfinite): undef if broken, set if needed. 	(isnan): undef if broken, set if needed.         (fpclassify): undef if broken, set if needed. 	* io/write.c: Remove TODO comment about working isfinite. 	* intrinsics/c99_functions.c (round): Use isfinite instead 	of fpclassify. 	* intrinsics/c99_functions.c (roundf): Ditto.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@104710 138bc75d-0d04-0410-961f-82ee72b054a4